# SkillFlow

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
plugins/linter/: AGENT.md  cli.py
plugins/skill_converter/: AGENT.md  __init__.py  converter.py
plugins/skill_runner/: AGENT.md  __init__.py  runner.py
scripts/: install.sh  skill_convert.py  skill_repl.py  skill_run.py
src/skillflow/: __init__.py  agent_registry.py  compose.py  context.py  convert_cli.py  core.py  docs.py  exceptions.py  graph.py  lint_backends.py  notifications.py  outbox.py  read_tools.py  recovery.py  run_cli.py  schema.py  step_validation.py  tool_loader.py  validation.py  workspace.py  write_tools.py
src/stepflow/: __init__.py  agent_registry.py  core.py  exceptions.py  graph.py  notifications.py  outbox.py  recovery.py  schema.py  step_validation.py  tool_loader.py  validation.py  (+2 more)
tests/: conftest.py  mocks.py  test_addon_converter.py  test_artifact_history.py  test_capability_registry.py  test_claim_skips_tool_step.py  test_compose.py  test_context.py  test_core.py  test_exceptions.py  test_existing_repo_apply.py  test_git_sync_pre.py  test_graph.py  test_integration.py  test_integration_configs.py  test_loop_external_terminal.py  test_migration_regression.py  test_noop_floor_fix.py  test_notifications.py  test_outbox.py  test_overlay_registry.py  test_per_item_loop.py  test_read_tools_exec.py  test_read_tools_label.py  test_recovery.py  test_regression.py  test_required_context.py  test_step_validation.py  test_tool_loader.py  test_tool_lock_contention.py  test_tools.py  test_trace_seq_unique.py  test_validation.py  test_web_tools.py  test_workspace.py  test_write_tools.py
(+120 files in other folders)
