[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stepflow"
version = "1.0.0"
description = "Config-agnostic LLM pipeline graph executor"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Stepflow contributors"},
]
keywords = ["llm", "pipeline", "graph", "orchestrator", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.15",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"stepflow.tools" = ["*/tool.yaml"]
"stepflow.plugins" = ["**/*.yaml", "**/*.md"]

[tool.setuptools.exclude-package-data]
"stepflow.plugins" = ["**/tests/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
